Update Super Diamond Internet Official.html

--- a/internets/Super Diamond Internet Official.html
+++ b/internets/Super Diamond Internet Official.html
@@ -1,4 +1,4 @@
 <script>
-var password = "aiwauwigeauygewau"
-var ip = "948.473.283.382"
+window.password = "aiwauwigeauygewau"
+window.ip = "948.473.283.382"
 </script>
