Update Super Diamond Internet Official.html

--- a/internets/Super Diamond Internet Official.html
+++ b/internets/Super Diamond Internet Official.html
@@ -1,4 +1,9 @@
+<html>
+<head></head>
+<body>
 <script>
 window.password = "aiwauwigeauygewau"
 window.ip = "948.473.283.382"
 </script>
+</body>
+</html>
