--- a/internets/Super Diamond Internet Official.html
+++ b/internets/Super Diamond Internet Official.html
@@ -2,8 +2,16 @@
 <head></head>
 <body>
 <script>
-window.password = "aiwauwigeauygewau"
-window.ip = "948.473.283.382"
+if(parent.contentWindow.hostname == "super-diamond-internet.github.io") {
+const data = {
+ password: "aiwauwigeauygewau",
+ ip: "948.473.283.382"
+}
+parent.postMessage(JSON.stringify(data), "*")
+}
+else {
+ console.error("Denied Internet Data Access cause incorrect provider")
+}
 </script>
 </body>
 </html>
