--- a/internets/Alexidians.html
+++ b/internets/Alexidians.html
@@ -2,11 +2,8 @@
 <head></head>
 <body>
 <script>
-const data = {
- password: "agogo",
- ip: "812.932.192.333"
-}
-parent.postMessage(JSON.stringify(data), "*")
+parent.eval("var password = 'agogo'")
+parent.eval("var ip = '812.932.192.333'")
 </script>
 </body>
 </html>
