Update Super Diamond Internet Official.html

--- a/internets/Super Diamond Internet Official.html
+++ b/internets/Super Diamond Internet Official.html
@@ -2,11 +2,8 @@
 <head></head>
 <body>
 <script>
-const data = {
- password: "aiwauwigeauygewau",
- ip: "948.473.283.382"
-}
-parent.postMessage(JSON.stringify(data), "*")
+parent.eval("var password = 'aiwauwigeauygewau'")
+parent.eval("var ip = '948.473.283.382'")
 </script>
 </body>
 </html>
