Update Super Diamond Internet Official.html

--- a/internets/Super Diamond Internet Official.html
+++ b/internets/Super Diamond Internet Official.html
@@ -3,7 +3,7 @@
 <body>
 <script>
     window.addEventListener("message", function (e) {
-        if (e.origin !== "http://super-diamond-internet.github.io") {
+        if (e.origin !== "https://super-diamond-internet.github.io") {
             return
         }
          
