--- a/internets/Alexidians.html
+++ b/internets/Alexidians.html
@@ -3,7 +3,7 @@
 <body>
 <script>
     window.addEventListener("message", function (e) {
-        if (e.origin !== "http://alexidians.github.io") {
+        if (e.origin !== "https://alexidians.github.io") {
             return
         }
          
