Update Super Diamond Internet Official.html

--- a/internets/Super Diamond Internet Official.html
+++ b/internets/Super Diamond Internet Official.html
@@ -11,8 +11,7 @@
          password: "aiwauwigeauygewau",
          ip: "948.473.283.382"
         }
-        
-        return internet;
+        parent.postMessage(JSON.stringify(internet), "*")
     })
 </script>
 </body>
