--- a/connector.html
+++ b/connector.html
@@ -4,7 +4,7 @@
 <script>
     var password = "getting..."
     var ip = "getting..."
-    var name "none"
+    var name = "none"
     var enteredPassword = "none"
     var internetConnect = document.createElement("iframe")
     document.body.appendChild(internetConnect)
